fix alignment

--- a/styles.css
+++ b/styles.css
@@ -81,5 +81,7 @@ img {
 }
 
 .about__box {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
